<resources>
    <string name="app_name">AppBusquedaML</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="searchableHint">Buscar en Mercado Libre</string>
    <string name="app_label">AppBusquedaML</string>
    <string name="sample_title">Moto G30 Dual SIM 128 GB gris tornasol 4 GB RAM</string>
    <string name="price_sample">$669.900</string>
    <string name="quota_sample">en 36x $ 18.608</string>
    <string name="shipping_sample">Envio gratis</string>
    <string name="availability_sample">Disponibilidad en 2 colores</string>
    <string name="score_sample">120</string>
    <string name="shopping_cart">Carrito de Compras</string>
</resources>